Suppress Unsafe warnings when running on Java versions 23 to 25 (#108)
When NFRT detects that it's about to run a tool on Java 23, 24 or 25 it
will add `--sun-misc-unsafe-memory-access=allow` according to
https://openjdk.org/jeps/471 to suppress the warning in Java 25
Attempts to use the `release` file first (as it's faster) and falls back
to running `-version`.